# Segregator

./: CMakeLists.txt  README.md  package.xml
cmake/: spectra.CMakeLists.txt.in
config/: segregator_params.yaml
examples/: segregator_example.cpp
include/: cluster_manager.hpp  conversion.hpp  dataio.hpp  fpfh_manager.hpp  semantic_teaser.hpp  utility.h
include/teaser/: certification.h  registration.h
launch/: run_segregator.launch
materials/: 000000.label  000020.label  000030.label  004413.label
rviz/: segregator.rviz
src/: certification.cc  registration.cc  semantic_teaser.cpp
